Add GitHub Actions for CAD comparison

--- a/.github/workflows/compare.yml
+++ b/.github/workflows/compare.yml
@@ -19,7 +19,7 @@ jobs:
           perl compare2.pl \
             --golden=golden \
             --result=result \
-            --fields=Voltage,Delay,Power \
+            --fields=Voltage\
             --output=compare_report.txt
 
       - name: Upload Report
